--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,3 +3,13 @@
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+.box1{
+    height: 490px;
+    width: 350px;
+    border: 1px solid black;
+    position: relative;
+    padding: 20px;
+    top: 50px;
+    left: 35%;
+    background-color: blue;
+}
