italicized h2 quiz board and change its color to blue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,3 +32,10 @@ img{
     left: 150px;
     top: 40px;
 }
+
+h2{
+    display: flex;
+    justify-content: center;
+    color: blue;
+    font-style: italic;
+}
