add green color to background

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -55,3 +55,9 @@ hr{
     font-weight: bolder;
     font-style: italic;
 }
+
+.submit{
+    position: absolute;
+    bottom: -60px;
+    background-color: green;
+}
