--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,3 +67,15 @@ hr{
     width: 330px;
     left: -30px;
 }
+#Btn{
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    margin-top: 360px;
+    border-radius: 20px;
+  }
