--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,8 +2,19 @@
     margin: 0;
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
 }
+
+body, html {
+  height: 100%;
+  /* The image used */
+  background-image: url("https://www.cnyakundi.com/wp-content/uploads/2021/07/Alliance-Girls-High-School.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+}
+
 .box1{
     height: 490px;
     width: 350px;
