add scrolling text using marquee

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -110,3 +110,9 @@ h3{
     margin-top: 20px;
     font-style: italic;  
 }
+
+.mar{
+    padding-top: 100px;
+    font-size: xx-large;
+    color: maroon;
+}
